--- a/CNN.html
+++ b/CNN.html
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <div class="word_excluded" style="margin: 5rem 0 2rem 0; font-size: 3rem; font-weight: bold;">Video</div>
+    <div class="word_excluded" style="margin: 5rem 0 2rem 0; font-size: 3rem; font-weight: bold;">To check that git working on Visual Cods</div>
 
     <div class="video">
         <a href="#">
