Microsoft =>Edition for responsive version for small devices, up to 339 px

--- a/Microsoft/Microsoft.html
+++ b/Microsoft/Microsoft.html
@@ -12,6 +12,26 @@
 </head>
 <body>
     <header class="header">
+        <nav class="for_smallDevices">
+            <div class="left">
+                <a href="#" class="main_threeline" >
+                    <div class="three_lines"></div>
+                    <div class="three_lines"></div>
+                    <div class="three_lines"></div>
+                </a>
+                <a href="#"><img src="./images/searching.jpeg"  width="18" height="18" ></a>
+            </div>
+            <div class="Micrisoft_logo_smallDevices">
+                <img src="./images/Micrisoft.png"  width="100" height="24" >
+            </div>
+            <div class="right">
+                <a href="#"><img src="./images/shop.png"  width="15" height="15" ></a>
+                <a href="#"><img src="./images/profile.png"  width="28" height="28" ></a>
+            </div>
+        </nav>
+
+
+
         <nav class="nav">
             <div class="left_nav">
             <div class="Micrisoft_logo">
@@ -192,9 +212,9 @@
 </a>
     <!-- </div> -->
 <!-- ------------------second four list items which has the same css----------------------------------- -->
-<div class="fur_unternehmen">Für Unternehmen</div>
+<!-- <div class="mom_unternehmen"><div class="fur_unternehmen">Für Unternehmen</div></div> -->
 <div class="four_list_second">
-
+            <div class="fur_unternehmen">Für Unternehmen</div>
             <a href="#" class="p1 ">
                 <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Pro-10-for-Business-Platinum-003?wid=380&hei=213&fit=crop" >
                 <div class="bold_title_box">Bis zu 331,90 € Sparen</div>
@@ -218,7 +238,7 @@
                 <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Visual-Studio-Icon?wid=380&hei=213&fit=crop">
                 <div class="bold_title_box">Visual Studio 2022</div>
                 <div class="description_box">Profitieren Sie von der leistungsfähigsten IDE für .NET- und C++-Entwickler unter Windows, um Web-, Cloud-, Desktop- und mobile Anwendungen, Dienste und Spiele zu erstellen.</div>
-                <div class="general_fourIcons">Visual Studio 2022 herunterladen</div>
+                <div class="general_fourIcons Visual_Studio">Visual Studio 2022 herunterladen</div>
             </a>
 
 
