Microsoft => Responsive version of tablets, up to 859 px

--- a/Microsoft/Microsoft.html
+++ b/Microsoft/Microsoft.html
@@ -185,13 +185,13 @@
             <div class="description_box">Immer für Sie da und bereit, Sie zu unterstützen wann immer Sie eine Antwort benötigen.</div>
             <div class="general_fourIcons CopilotApp_icon" >Jetzt die Copilot-App herunterladen</div>
         </a>
-        <a href="#" class="p1">
+        <a href="#" class="p1 padding_Xbox">
             <img src="./images/game_hand.png">
             <div class="bold_title_box" >Xbox Controller</div>
             <div class="description_box">Elite, kabellos und anpassungsfähig finde den Controller für deinen Stil.</div>
             <div class="general_fourIcons list_jetztKaufen_icon" >Jetzt Kaufen</div>
         </a>
-        <a href="#" class="p1">
+        <a href="#" class="p1 padding_Xbox">
             <img src="./images/game_box.png">
             <div class="bold_title_box">Xbox Series X</div>
             <div class="description_box">Die schnellste und leistungsfähigste Xbox aller Zeiten.</div>
@@ -215,14 +215,14 @@
 <!-- <div class="mom_unternehmen"><div class="fur_unternehmen">Für Unternehmen</div></div> -->
 <div class="four_list_second">
             <div class="fur_unternehmen">Für Unternehmen</div>
-            <a href="#" class="p1 ">
+            <a href="#" class="p1 padding_Xbox ">
                 <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Pro-10-for-Business-Platinum-003?wid=380&hei=213&fit=crop" >
                 <div class="bold_title_box">Bis zu 331,90 € Sparen</div>
                 <div class="description_box">Holen Sie sich die Flexibilität eines Tablets und die Leistung eines Laptops in einem ultramobilen Design.</div>
                 <div class="general_fourIcons" >Jetzt Kaufen</div>
             </a>
 
-            <a href="#" class="p1 ">
+            <a href="#" class="p1 padding_Xbox">
                 <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Copilot-Commercial?wid=380&hei=213&fit=crop"  >
                 <div class="bold_title_box" >Microsoft 365 Copilot</div>
                 <div class="description_box">Sparen Sie Zeit und konzentrieren Sie sich auf die Dinge, die am wichtigsten sind mit KI in Microsoft 365 for Business.</div>
