Microsoft => The navbar was made completely responsive for all devices.

--- a/Microsoft/Microsoft.html
+++ b/Microsoft/Microsoft.html
@@ -35,7 +35,7 @@
         <nav class="nav">
             <div class="left_nav">
             <div class="Micrisoft_logo">
-                <img src="./images/Micrisoft.png" width="135" height="30" class="Micrisoft">
+                <img src="./images/Micrisoft.png" width="110" height="25" class="Micrisoft">
             </div>
             <div class="options">
                 <a href="#" >Microsoft 365</a>
@@ -48,85 +48,144 @@
                 <a href="#" >Kleine Unternehmen</a>
                 <a href="#" >Support</a>
             </div>
+            <div class="options_860px">
+                <a href="#" >Microsoft 365</a>
+                <a href="#" >Teams</a>
+                <a href="#" >Copilot</a>
+                <a href="#" style="display: flex; align-items: center;" >
+                    <div class="Alles_Von">mehr</div>
+                    <div class="checkmark"> <div class="tick"></div></div>
+                </a>
             </div>
+            <div class="options_871px">
+                <a href="#" >Microsoft 365</a>
+                <a href="#" >Teams</a>
+                <a href="#" >Copilot</a>
+                <a href="#" >Windows</a>
+                <a href="#" style="display: flex; align-items: center;" >
+                    <div class="Alles_Von">mehr</div>
+                    <div class="checkmark"> <div class="tick"></div></div>
+                </a>
+            </div>
+            <div class="options_931px">
+                <a href="#" >Microsoft 365</a>
+                <a href="#" >Teams</a>
+                <a href="#" >Copilot</a>
+                <a href="#" >Windows</a>
+                <a href="#" >Surface</a>
+                <a href="#" style="display: flex; align-items: center;" >
+                    <div class="Alles_Von">mehr</div>
+                    <div class="checkmark"> <div class="tick"></div></div>
+                </a>
+            </div>
+            <div class="options_978px">
+                <a href="#" >Microsoft 365</a>
+                <a href="#" >Teams</a>
+                <a href="#" >Copilot</a>
+                <a href="#" >Windows</a>
+                <a href="#" >Surface</a>
+                <a href="#" >Xbox</a>
+                <a href="#" style="display: flex; align-items: center;" >
+                    <div class="Alles_Von">mehr</div>
+                    <div class="checkmark"> <div class="tick"></div></div>
+                </a>
+
+                </a>
+            </div>
+            <div class="options_1160px">
+                <a href="#" >Microsoft 365</a>
+                <a href="#" >Teams</a>
+                <a href="#" >Copilot</a>
+                <a href="#" >Windows</a>
+                <a href="#" >Surface</a>
+                <a href="#" >Xbox</a>
+                <a href="#" >Sonderangebote</a>
+                <a href="#" style="display: flex; align-items: center;" >
+                    <div class="Alles_Von">mehr</div>
+                    <div class="checkmark"> <div class="tick"></div></div>
+                </a>
+            </div>
+
+            </div>
+
+
+
             <div class="right_nav">
                 <a href="#" class="macrosoft_list">
                     <div class="Alles_Von">Alles von Microsoft</div>
                     <div class="checkmark"> <div class="tick"></div></div>
                 </a>
-                <div class="auto_list">
-                    <div class="aaa">
-                        <div class="first_bold">Software</div>
-                        <a href="#">Windows-Apps</a>
-                        <a href="#">KI</a>
-                        <a href="#">OneDrive</a>
-                        <a href="#">Outlook</a>
-                        <a href="#">Skype</a>
-                        <a href="#">OneNote</a>
-                        <a href="#">Microsoft</a>
-                    </div>
-
-                    <div class="aaa">
-                        <div class="first_bold">PCs und Geräte</div>
-                        <a href="#">Xbox kaufen</a>
-                        <a href="#">Zubehör</a>
-                        <a href="#">VR und Mixed Reality</a>
-                    </div>
-
-                    <div class="aaa">
-                        <div class="first_bold">Unterhaltung</div>
-                        <a href="#">Xbox Game Pass Ultimate</a>
-                        <a href="#">Xbox-Spiele</a>
-                        <a href="#">PC-Spiele</a>
-                        <a href="#">Windows-Spiele</a>
-                        <a href="#">Filme & TV</a>
-                    </div>
-
-                    <div class="aaa">
-                        <div class="first_bold">Unternehmen</div>
-                        <a href="#">Micrisoft Cloud</a>
-                        <a href="#">Micrisoft Security</a>
-                        <a href="#">Azure</a>
-                        <a href="#">Dynamics 365</a>
-                        <a href="#">Microsoft 365 for Business</a>
-                        <a href="#">Micrisoft Branchen</a>
-                        <a href="#">Micrisoft Power Platform</a>
-                        <a href="#">Windows 365</a>
-                    </div>
-                    <div class="aaa">
-                        <div class="first_bold">Entwickler & IT</div>
-                        <a href="#">Micrisoft-Entwickler</a>
-                        <a href="#">Micrisoft Learn</a>
-                        <a href="#">Mehr über den Erfolg von ISV erfahren</a>
-                        <a href="#">Micrisoft Tech Community</a>
-                        <a href="#">Azure Marketplace</a>
-                        <a href="#">AppSource</a>
-                        <a href="#">Visual Studio</a>
-
-                    </div>
-                    <div class="aaa">
-                        <div class="first_bold">Mehr</div>
-                        <a href="#">Micrisoft Rewards</a>
-                        <a href="#">Download Center</a>
-                        <a href="#">Bildungswesen</a>
-                        <a href="#">Geschenkkarten</a>
-                        <a href="#">Lizenzierung</a>
-                    </div>
-
-
-                </div>
 
                 <div class="suchen">
-                    <a href="#">Suchen</a>
+                    <a href="#" class="captions_icons">Suchen</a>
                     <a href="#"><img src="./images/searching.jpeg" width="20" height="20" ></a>
                 </div>
                 <div class="shop">
-                    <a href="#">Warenkorb</a>
+                    <a href="#" class="captions_icons">Warenkorb</a>
                     <a href="#"><img src="./images/shop.png" width="22" height="20"></a>
                 </div>
                 <div class="profile">
-                    <a href="#">Anmelden</a>
+                    <a href="#" class="captions_icons">Anmelden</a>
                     <a href="#"></a><img src="./images/profile.png" width="38" height="38"></a>
+                </div>
+            </div>
+            <div class="auto_list">
+                <div class="aaa">
+                    <div class="first_bold">Software</div>
+                    <a href="#">Windows-Apps</a>
+                    <a href="#">KI</a>
+                    <a href="#">OneDrive</a>
+                    <a href="#">Outlook</a>
+                    <a href="#">Skype</a>
+                    <a href="#">OneNote</a>
+                    <a href="#">Microsoft</a>
+                </div>
+
+                <div class="aaa">
+                    <div class="first_bold">PCs und Geräte</div>
+                    <a href="#">Xbox kaufen</a>
+                    <a href="#">Zubehör</a>
+                    <a href="#">VR und Mixed Reality</a>
+                </div>
+
+                <div class="aaa">
+                    <div class="first_bold">Unterhaltung</div>
+                    <a href="#">Xbox Game Pass Ultimate</a>
+                    <a href="#">Xbox-Spiele</a>
+                    <a href="#">PC-Spiele</a>
+                    <a href="#">Windows-Spiele</a>
+                    <a href="#">Filme & TV</a>
+                </div>
+
+                <div class="aaa">
+                    <div class="first_bold">Unternehmen</div>
+                    <a href="#">Micrisoft Cloud</a>
+                    <a href="#">Micrisoft Security</a>
+                    <a href="#">Azure</a>
+                    <a href="#">Dynamics 365</a>
+                    <a href="#">Microsoft 365 for Business</a>
+                    <a href="#">Micrisoft Branchen</a>
+                    <a href="#">Micrisoft Power Platform</a>
+                    <a href="#">Windows 365</a>
+                </div>
+                <div class="aaa">
+                    <div class="first_bold">Entwickler & IT</div>
+                    <a href="#">Micrisoft-Entwickler</a>
+                    <a href="#">Micrisoft Learn</a>
+                    <a href="#">Mehr über den Erfolg von ISV erfahren</a>
+                    <a href="#">Micrisoft Tech Community</a>
+                    <a href="#">Azure Marketplace</a>
+                    <a href="#">AppSource</a>
+                    <a href="#">Visual Studio</a>
+
+                </div>
+                <div class="aaa">
+                    <div class="first_bold">Mehr</div>
+                    <a href="#">Micrisoft Rewards</a>
+                    <a href="#">Download Center</a>
+                    <a href="#">Bildungswesen</a>
+                    <a href="#">Geschenkkarten</a>
+                    <a href="#">Lizenzierung</a>
                 </div>
             </div>
 
