Microsoft => The whole Website is almost responsive for all types of devices. There are some probable mistakes that should be checked!!!

--- a/Microsoft/Microsoft.html
+++ b/Microsoft/Microsoft.html
@@ -204,6 +204,21 @@
             </div>
         </a>
     </div>
+<!-- -------------slider with  overlap------------------------------------- -->
+<div class="initialBG_with_overlap">
+    <a href="#" class="slider">
+            <div class="upperLap">
+
+            </div>
+            <div class="lowerLap">
+                <div class="TheBold_titleOf_slide">Außergewöhnliches erreichen</div>
+                <div class="description_title">Mit Microsoft 365 erhalten Sie umfangreichen Cloudspeicher, erweiterte Sicherheit für Ihre Daten und Geräte sowie leistungsstarke Apps für Produktivität und Kreativität mit KI1 in einem einzigen Abonnement.</div>
+                <div class="kaufen_icon">Microsoft 365 Kaufen</div>
+            </div>
+    </a>
+</div>
+
+
 <!-- ----------------------five icons under slider------------------------------------------------ -->
     <div class="five_icons">
         <a href="#" style="display: grid; justify-items: center;">
@@ -222,7 +237,7 @@
             <img src="./images/windows.png" width="40rem" height= "40rem">
             <div style="margin-top: 1.2rem;">Wählen Sie Ihr Microsoft 365</div>
         </a>
-        <a href="#" style="display: grid; justify-items: center;">
+        <a href="#" style="display: grid; justify-items: center; align-self: center;">
             <img src="./images/bag.png" width="40rem">
             <div style="margin-top: 1.5rem;">Für Unternehmen</div>
         </a>
@@ -232,33 +247,54 @@
 <div class="lower_container">
     <div class="four_list">
         <a href="#" class="p1">
-            <img src="./images/laptop.png" >
-            <div class="bold_title_box">Bis zu 450,00 € Sparen</div>
-            <div class="description_box">Surface Laptop, Copilot+: Nutzen Sie mit diesem außergewöhnlich leistungsstarken Notebook KI-Funktionen wie Live Captions und Cocreator.</div>
-            <div class="general_fourIcons list_jetztKaufen_icon" >Jetzt Kaufen</div>
+            <div class="upper">
+                <img src="./images/laptop.png" >
+                <div class="bold_title_box">Bis zu 450,00 € Sparen</div>
+                <div class="description_box">Surface Laptop, Copilot+: Nutzen Sie mit diesem außergewöhnlich leistungsstarken Notebook KI-Funktionen wie Live Captions und Cocreator.</div>
+            </div>
+            <div class="general_fourIcons " >Jetzt Kaufen</div>
         </a>
 
         <a href="#" class="p1">
-            <img src="./images/catalog.png"  >
-            <div class="bold_title_box" >Copilot ist ihr KI-Begleiter</div>
-            <div class="description_box">Immer für Sie da und bereit, Sie zu unterstützen wann immer Sie eine Antwort benötigen.</div>
-            <div class="general_fourIcons CopilotApp_icon" >Jetzt die Copilot-App herunterladen</div>
+            <div class="upper">
+                <img src="./images/catalog.png" >
+                <div class="bold_title_box" >Copilot ist ihr KI-Begleiter</div>
+                <div class="description_box">Immer für Sie da und bereit, Sie zu unterstützen wann immer Sie eine Antwort benötigen.</div>
+            </div>
+            <div class="general_fourIcons CopilotApp_icon " >Jetzt die Copilot-App herunterladen</div>
         </a>
         <a href="#" class="p1 padding_Xbox">
-            <img src="./images/game_hand.png">
-            <div class="bold_title_box" >Xbox Controller</div>
-            <div class="description_box">Elite, kabellos und anpassungsfähig finde den Controller für deinen Stil.</div>
-            <div class="general_fourIcons list_jetztKaufen_icon" >Jetzt Kaufen</div>
+            <div class="upper">
+                <img src="./images/game_hand.png">
+                <div class="bold_title_box" >Xbox Controller</div>
+                <div class="description_box">Elite, kabellos und anpassungsfähig finde den Controller für deinen Stil.</div>
+            </div>
+            <div class="general_fourIcons list_jetztKaufen_icon " >Jetzt Kaufen</div>
         </a>
         <a href="#" class="p1 padding_Xbox">
-            <img src="./images/game_box.png">
-            <div class="bold_title_box">Xbox Series X</div>
-            <div class="description_box">Die schnellste und leistungsfähigste Xbox aller Zeiten.</div>
+            <div class="upper">
+                <img src="./images/game_box.png">
+                <div class="bold_title_box">Xbox Series X</div>
+                <div class="description_box">Die schnellste und leistungsfähigste Xbox aller Zeiten.</div>
+            </div>
             <div class="general_fourIcons Xbox_icon">Xbox Series X Kaufen</div>
         </a>
     </div>
-<!--------------------------------- game pass part --------------------------------------->
-    <!-- <div class="game_pass"> -->
+<!--------------------------------- game pass part up to 1083.99 px --------------------------------------->
+<div class="game_pass_lower_1084">
+    <a class="gamePass_Linktag_lower_1084" href="#">
+        <div class="left_gamepass_lower_1084">
+            <div class="title_gamePass_lower_1084" >Game Pass</div>
+            <div class="description_gamePass_lower_1084" >Spiele neue Titel am ersten Tag. Und spiele mit anderen Gamern Hunderte großartiger Spiele auf Konsole und PC.</div>
+            <div class="kaufenIcon_gamePass_lower_1084" >Jetzt beitreten</div>
+        </div>
+        <div class="right_gamepass_lower_1084">
+            <img src="./images/gamepass.png">
+        </div>
+    </a>
+    </div>
+<!--------------------------------- game pass part from 1084 px --------------------------------------->
+<div class="game_pass">
 <a class="gamePass_Linktag" href="#">
     <div class="left_gamepass">
         <div class="title_gamePass" >Game Pass</div>
@@ -269,35 +305,44 @@
         <img src="./images/gamepass.png">
     </div>
 </a>
-    <!-- </div> -->
+</div>
 <!-- ------------------second four list items which has the same css----------------------------------- -->
 <!-- <div class="mom_unternehmen"><div class="fur_unternehmen">Für Unternehmen</div></div> -->
 <div class="four_list_second">
+
             <div class="fur_unternehmen">Für Unternehmen</div>
-            <a href="#" class="p1 padding_Xbox ">
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Pro-10-for-Business-Platinum-003?wid=380&hei=213&fit=crop" >
-                <div class="bold_title_box">Bis zu 331,90 € Sparen</div>
-                <div class="description_box">Holen Sie sich die Flexibilität eines Tablets und die Leistung eines Laptops in einem ultramobilen Design.</div>
+            <a href="#" class="p1 padding_Xbox">
+                <div class="upper">
+                    <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Pro-10-for-Business-Platinum-003?wid=380&hei=213&fit=crop" >
+                    <div class="bold_title_box">Bis zu 331,90 € Sparen</div>
+                    <div class="description_box">Holen Sie sich die Flexibilität eines Tablets und die Leistung eines Laptops in einem ultramobilen Design.</div>
+                </div>
                 <div class="general_fourIcons" >Jetzt Kaufen</div>
             </a>
 
             <a href="#" class="p1 padding_Xbox">
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Copilot-Commercial?wid=380&hei=213&fit=crop"  >
-                <div class="bold_title_box" >Microsoft 365 Copilot</div>
-                <div class="description_box">Sparen Sie Zeit und konzentrieren Sie sich auf die Dinge, die am wichtigsten sind mit KI in Microsoft 365 for Business.</div>
+                <div class="upper">
+                    <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Copilot-Commercial?wid=380&hei=213&fit=crop"  >
+                    <div class="bold_title_box" >Microsoft 365 Copilot</div>
+                    <div class="description_box">Sparen Sie Zeit und konzentrieren Sie sich auf die Dinge, die am wichtigsten sind mit KI in Microsoft 365 for Business.</div>
+                </div>
                 <div class="general_fourIcons second_Icons" >Weitere Informationen</div>
             </a>
             <a href="#" class="p1 ">
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Azure-AI-Bloom?wid=380&hei=213&fit=crop">
-                <div class="bold_title_box" >Willkommen im Zeitalter der KI</div>
-                <div class="description_box">Erstelle, kommuniziere und programmiere mit den modernen KI-Lösungen von Microsoft.</div>
+                <div class="upper">
+                    <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Azure-AI-Bloom?wid=380&hei=213&fit=crop">
+                    <div class="bold_title_box" >Willkommen im Zeitalter der KI</div>
+                    <div class="description_box">Erstelle, kommuniziere und programmiere mit den modernen KI-Lösungen von Microsoft.</div>
+                </div>
                 <div class="general_fourIcons" >KI-Lösungen entdecken</div>
             </a>
             <a href="#" class="p1 ">
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Visual-Studio-Icon?wid=380&hei=213&fit=crop">
-                <div class="bold_title_box">Visual Studio 2022</div>
-                <div class="description_box">Profitieren Sie von der leistungsfähigsten IDE für .NET- und C++-Entwickler unter Windows, um Web-, Cloud-, Desktop- und mobile Anwendungen, Dienste und Spiele zu erstellen.</div>
-                <div class="general_fourIcons Visual_Studio">Visual Studio 2022 herunterladen</div>
+                <div class="upper">
+                    <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Visual-Studio-Icon?wid=380&hei=213&fit=crop">
+                    <div class="bold_title_box">Visual Studio 2022</div>
+                    <div class="description_box">Profitieren Sie von der leistungsfähigsten IDE für .NET- und C++-Entwickler unter Windows, um Web-, Cloud-, Desktop- und mobile Anwendungen, Dienste und Spiele zu erstellen.</div>
+                </div>
+                <div href="#" class="general_fourIcons Visual_Studio" >Visual Studio 2022 herunterladen</div>
             </a>
 
 
