Microsoft => Correcting the Game Pass width and position of the caption_für Unternehmen

--- a/Microsoft/Microsoft.html
+++ b/Microsoft/Microsoft.html
@@ -307,11 +307,8 @@
 </a>
 </div>
 <!-- ------------------second four list items which has the same css----------------------------------- -->
-<!-- <div class="mom_unternehmen"><div class="fur_unternehmen">Für Unternehmen</div></div> -->
 <div class="four_list_second">
-
-            <div class="fur_unternehmen">Für Unternehmen</div>
-            <a href="#" class="p1 padding_Xbox">
+            <a href="#" class="p1 Tagunternehmen">
                 <div class="upper">
                     <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Surface-Pro-10-for-Business-Platinum-003?wid=380&hei=213&fit=crop" >
                     <div class="bold_title_box">Bis zu 331,90 € Sparen</div>
